fix: add codegen and rename component
